# dynabatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  pypi.yml  release.yml  test.yml
dynabatch/: __init__.py  main.py  regressor.py  sampler.py  trainer.py  utils.py
dynabatch/models/: classifier.pkl  regressor.ubj
dynabatch/test/: conftest.py  test_integration.py  test_main.py  test_others.py  test_trainer.py  test_trainer_oom.py  test_utils.py
notebooks/: dynabatch_inference_comparison.ipynb  dynabatch_training_comparison.ipynb
train_regressor/: generate_training_data.ipynb  readme.md  train_regressor.ipynb
train_regressor/data/training_data/v1/: alma_12_256_14000_0.2.parquet  alma_12_470_14000_0.2.parquet  alma_1_128_3000_0.0.parquet  alma_1_256_3000_0.0.parquet  alma_1_512_3000_0.0.parquet  alma_2_128_3000_0.0.parquet  alma_2_256_3000_0.0.parquet  alma_2_512_3000_0.0.parquet  alma_4_128_3000_0.0.parquet  alma_4_256_3000_0.0.parquet  alma_4_300_5000_0.2.parquet  alma_4_400_5000_0.2.parquet  alma_4_512_3000_0.0.parquet  alma_64_128_5000_0.0.parquet  alma_64_256_5000_0.0.parquet  alma_6_300_10000_0.2.parquet  alma_6_400_10000_0.2.parquet  alma_8_128_3000_0.0.parquet  alma_8_256_10000_0.2.parquet  alma_8_256_3000_0.0.parquet  alma_8_512_10000_0.2.parquet  alma_8_512_3000_0.0.parquet  nllb_128_128_5000_0.0.parquet  nllb_128_256_5000_0.0.parquet  nllb_128_512_5000_0.0.parquet  nllb_16_256_20000_0.2.parquet  nllb_16_512_20000_0.2.parquet  nllb_1_256_1000_0.0.parquet  nllb_1_512_1000_0.0.parquet  (+39 more)
(+36 files in other folders)
